fixed tweet containter to wrap text vertically

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -46,6 +46,9 @@ article.tweet .content {
   font-size: 1em;
   line-height: 1.4;
   margin: 0;
+  word-break: break-word;
+  white-space: normal;
+  overflow-wrap: break-word;
 }
 article.tweet .bottom-row {
   display: flex;
